--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "obsidian-to-notion",
-  "version": "0.7.6",
+  "name": "obsidian-notion-export",
+  "version": "0.0.1",
   "type": "module",
-  "description": "This is a  plugin for Obsidian. This plugin share obsidian md  file to notion with notion api",
+  "description": "Export a folder of files to Notioni",
   "main": "main.js",
   "scripts": {
     "dev": "node esbuild.config.mjs",
