--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "@tryfabric/martian": "^1.2.0",
     "https-proxy-agent": "^5.0.1",
+    "notion-helper": "^1.2.22",
     "yaml": "^2.1.0",
     "yaml-front-matter": "^4.1.1"
   }
